[gd_scene format=3 uid="uid://b02sdjjdkt47h"]

[ext_resource type="Script" uid="uid://daqlh0m2eqc6r" path="res://scenes/hud.gd" id="1_ahhtf"]

[node name="HUD" type="CanvasLayer" unique_id=281953342]
script = ExtResource("1_ahhtf")

[node name="ScoreLabel" type="Label" parent="." unique_id=1766487552]
offset_left = 17.0
offset_top = 17.0
offset_right = 107.0
offset_bottom = 40.0
text = "Collected: 0"

[node name="RestartLabel" type="Label" parent="." unique_id=485228167]
offset_left = 546.0
offset_top = 47.0
offset_right = 634.0
offset_bottom = 70.0
text = "R to restart"

[node name="PauseLabel" type="Label" parent="." unique_id=1358588634]
visible = false
offset_left = 375.0
offset_top = 1.0
offset_right = 437.0
offset_bottom = 24.0
text = "PAUSED"
horizontal_alignment = 1

[node name="StartLabel" type="Label" parent="." unique_id=665877942]
offset_left = 542.0
offset_top = 14.0
offset_right = 692.0
offset_bottom = 37.0
text = "Press Enter to Start"
horizontal_alignment = 1

[node name="HpLabel" type="Label" parent="." unique_id=1831370107]
offset_left = 18.0
offset_top = 47.0
offset_right = 58.0
offset_bottom = 70.0
text = "HP: 3"
horizontal_alignment = 2

[node name="GameOverLabel" type="Label" parent="." unique_id=892685461]
visible = false
offset_left = 425.0
offset_top = 43.0
offset_right = 587.0
offset_bottom = 66.0
text = "GAME OVER - Press R"
horizontal_alignment = 1

[node name="WinLabel" type="Label" parent="." unique_id=670771317]
offset_left = 259.0
offset_top = 60.0
offset_right = 400.0
offset_bottom = 83.0
scale = Vector2(1.0148966, 1)
text = "YOU WIN - Press R"
horizontal_alignment = 1

[node name="ObjectiveLabel" type="Label" parent="." unique_id=401878314]
offset_left = 267.0
offset_top = 6.0
offset_right = 373.0
offset_bottom = 29.0
text = "Goal: LOCKED"

[node name="SettingsButton" type="Button" parent="." unique_id=1593564981]
visible = false
offset_left = 16.0
offset_top = 84.0
offset_right = 148.0
offset_bottom = 120.0
text = "Settings"

[node name="PauseOverlay" type="ColorRect" parent="." unique_id=1841523237]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0, 0, 0, 0.45)

[node name="SettingsPanel" type="Control" parent="." unique_id=1788962174]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="SettingsPanel" unique_id=813731518]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -190.0
offset_top = -150.0
offset_right = 190.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="SettingsPanel/Panel" unique_id=1408484607]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 22.0
offset_right = -24.0
offset_bottom = -22.0
theme_override_constants/separation = 10

[node name="VolumeLabel" type="Label" parent="SettingsPanel/Panel/VBox" unique_id=1304909471]
layout_mode = 2
text = "Master Volume"

[node name="VolumeSlider" type="HSlider" parent="SettingsPanel/Panel/VBox" unique_id=1681056730]
layout_mode = 2
custom_minimum_size = Vector2(0, 28)
max_value = 1.0
step = 0.05
value = 1.0

[node name="WindowModeLabel" type="Label" parent="SettingsPanel/Panel/VBox" unique_id=1079087865]
layout_mode = 2
text = "Window Mode"

[node name="WindowModeOption" type="OptionButton" parent="SettingsPanel/Panel/VBox" unique_id=406067003]
layout_mode = 2
custom_minimum_size = Vector2(0, 30)

[node name="KeybindHint" type="Label" parent="SettingsPanel/Panel/VBox" unique_id=180548730]
layout_mode = 2
text = "Keybinds: coming soon"

[node name="BackButton" type="Button" parent="SettingsPanel/Panel/VBox" unique_id=248391405]
layout_mode = 2
text = "Back"
size_flags_horizontal = 4
